# auto-video

./: .env.example  .gitignore  Cargo.toml  DEVELOPMENT.md  LICENSE  Makefile  README.md  STYLE_GUIDE.md  example.txt  story.txt  test.sh  需求.md
src/: error.rs  main.rs
src/api/: mod.rs  qwen.rs
src/scene/: mod.rs
src/video/: generator.rs  mod.rs
