[package]
name = "auto-video"
version = "0.1.0"
edition = "2021"
authors = ["auto-video contributors"]
description = "Automatic video generation service using AI"
license = "MIT"
repository = "https://github.com/yourusername/auto-video"

[[bin]]
name = "auto-video"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# HTTP client for API calls
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.35", features = ["full"] }

# JSON processing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Environment variables
dotenvy = "0.15"

# Base64 encoding/decoding
base64 = "0.21"

# File I/O
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
